--- a/Files/conflict.html
+++ b/Files/conflict.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>from branch main</h1>
+    <h1>from branch version-1</h1>
     
 </body>
 </html>
